support jdk17 in agent plugin testing, add test case plugin on jdk17 (#55)